syntax = "proto3";
package pb;

option go_package = "api/pb";

message TextRequest {
  string text = 1;
}

message TextReply {
  string text = 1;
}

message StateReply {
  bool state = 1;
}

message KV {
  string key = 1;
  string value = 2;
}
