syntax = "proto3";
package pb;

import "base.proto";

option go_package = "api/pb";

service NLPSvc {
  rpc Pinyin(TextRequest) returns (WordsReply) {}
  rpc Segmentation(TextRequest) returns (WordsReply) {}
  rpc Classifier(TextRequest) returns (TextReply) {}
}

message WordsReply {
  repeated string text = 1;
}
